-jumping burger due to scrollBar is fixed;

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -2,7 +2,6 @@
   width: 38px;
   height: 20px;
   position: absolute;
-  right: 12vw;
   top: 15px;
   z-index: 3;
   overflow: hidden;
